# Wednesday_Whatsapp_assistant

./: .env.example  .gitignore  Dockerfile  Dockerfile.cloudrun  Dockerfile.mcp  ECOMMERCE_README.md  IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION_FINAL.md  NEW_FEATURES_GUIDE.md  OPTIMIZATION_SUMMARY.md  PAXI_INTEGRATION_GUIDE.md  PROTOCOL_ERROR_FIX.md  README.md  REDIS_FIX.md  REDIS_SOLUTION.md  SPEECH_SETUP.md  WAHA_MEMORY_OPTIMIZATION.md  WEBHOOK_503_FIX.md  WHATSAPP_OPTIMIZATION_GUIDE.md  WHATSAPP_SERVICE_MIGRATION.md  apply-wednesday.ps1  chromedb.py  config.py  database.py  demo-memory-optimization.sh  docker-compose.yaml  ecommerce.db  firebase_manager.py  main.py  mcp.json  models.py  orders.json  pyproject.toml  render.yaml  requirements.txt  requirements.txtsec.endpointdlp  setup_ecommerce.py  test.py  test_ai.py  test_speech_console.py  (+6 more)
.github/: copilot-instructions.md
app/: __init__.py  config.py  extensions.py
backend/: agent.py  config.py  db.py  main.py  oauth.py  task-definition.json  voice.py  whatsapp.py
chroma_db/: chroma.sqlite3
docs/: GCP_DEPLOYMENT.md  N8N_SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
handlers/: accommodation.py  admin.py  advanced_ai.py  auth_manager.py  bytez_handler.py  calendar.py  contacts.py  daily_briefing.py  elevenlabs_voice.py  expenses.py  fitness.py  gemini.py  gmail.py  gmail_quickstart.py  google_auth.py  google_notes.py  image_analysis.py  jarvis_core.py  long_term_memory.py  mcp_agent.py  media_generator.py  memory_search.py  mood_music.py  news.py  (+18 more)
(+75 files in other folders)
